# Telemedicine-AI-Diagnostics

./: README.md  SETUP_GUIDE.md  crew.py  main.py  pyproject.toml  run_with_mock_data.py  telemedicine_research.md  test_powerpoint.py
samples/: aviation_research.md  quantum_research.md
tests/tests/: test_ollama_setup.py
