[project]
name = "telemedicine_project"
version = "0.1.0"
description = "telemedicine_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.1",
    "python-dotenv",
    "python-pptx>=0.6.21",
]

[project.scripts]
telemedicine_project = "telemedicine_project.main:run"
run_crew = "telemedicine_project.main:run"
train = "telemedicine_project.main:train"
replay = "telemedicine_project.main:replay"
test = "telemedicine_project.main:test"
run_with_trigger = "telemedicine_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
